--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     <script src="https://cdn.firebase.com/js/client/2.2.4/firebase.js"></script>
     <script src="https://cdn.firebase.com/libs/angularfire/1.1.3/angularfire.min.js"></script>
     <script src="bootstrap/js/bootstrap.min.js"></script>
-    <script src="dist/all.min.js" type="text/javascript"></script>
+<!--    <script src="dist/all.min.js" type="text/javascript"></script>-->
+    <script src="js/js.js" type="text/javascript"></script>
 </head>
 
 <body ng-controller="MyController">
@@ -30,11 +31,10 @@
                 <a href="#/" ng-click="menuClick()"><i class="fa fa-home"></i><span>HOME</span></a>
                 <a href="#" ng-click="menuClick()"><i class="fa fa-calendar"></i><span>FIXTURES</span></a>
                 <a href="#team" ng-click="menuClick()"><i class="fa fa-users"></i><span>TEAM</span></a>
-                <a href="#" ng-click="menuClick()"><i class="fa fa-calendar"></i><span>LEAGUE TABLE</span></a>
+                <a href="#table" ng-click="menuClick()"><i class="fa fa-calendar"></i><span>LEAGUE TABLE</span></a>
             </nav>
         </section>
         <section class="content">
-            <img class='head-img' src="image/headImage.jpg" />
             <div ng-view></div>
         </section>
     </div>
