--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE HTML>
-<html ng-app="myApp">
+<html ng-app="myApp" ng-controller="MyController">
 
 <head>
-    <title>Manchester United</title>
+    <title>{{teamName}}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
+    <link rel="icon" type="image/png" href="{{pageIcon}}">
     <link type="text/css" rel="stylesheet" href="css/Style.css" />
     <link type="text/css" rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css" />
     <link type="text/css" rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.min.css" />
@@ -21,28 +22,50 @@
     <script src="dist/all.min.js" type="text/javascript"></script>
 </head>
 
-<body ng-controller="MyController">
-    <header>
+<body>
+    <header class="col-xs-12">
         <button ng-click="menuClick()"> <i class="fa fa-bars menu-icon"></i>
         </button>
         <div class="title" ng-bind="page.title">HOME</div>
-        <img src="image/logo.png" />
+        <img src="{{pageIcon}}" />
     </header>
-    <div class="container main" id="container">
-        <section class="nav-left">
-            <nav>
-                <a href="#/" ng-click="menuClick()"><i class="fa fa-home"></i><span>HOME</span></a>
-                <a href="#calendar" ng-click="menuClick()"><i class="fa fa-calendar"></i><span>FIXTURES</span></a>
-                <a href="#team" ng-click="menuClick()"><i class="fa fa-users"></i><span>TEAM</span></a>
-                <a href="#table" ng-click="menuClick()"><i class="fa fa-calendar"></i><span>LEAGUE TABLE</span></a>
-            </nav>
-        </section>
-        <section class="content">
-            <div ng-view></div>
-        </section>
+    <div class="wrapped">
+        <div class="container main col-xs-12" id="container">
+            <section class="nav-left">
+                <nav>
+                    <a href="#/" ng-click="menuClick()"><i class="fa fa-home"></i><span>HOME</span></a>
+                    <a href="#calendar" ng-click="menuClick()"><i class="fa fa-calendar"></i><span>FIXTURES</span></a>
+                    <a href="#team" ng-click="menuClick()"><i class="fa fa-users"></i><span>TEAM</span></a>
+                    <a href="#table" ng-click="menuClick()"><i class="fa fa-calendar"></i><span>LEAGUE TABLE</span></a>
+                </nav>
+            </section>
+            <section class="content">
+                <div ng-view></div>
+                <div class="footer">
+
+                    <h4>OFFICIAL PARTNERS</h4>
+                    <div class="partners">
+                        <div class="col-xs-12">
+                            <img class="col-xs-3" src="image/logo/chevrolet-logo.png" />
+                            <img class="col-xs-3" src="image/logo/adidas-logo.png" />
+                            <img class="col-xs-3" src="image/logo/aon-logo.png" />
+                        </div>
+                    </div>
+                    <hr/>
+                    <div class="social">
+                        <ul>
+                            <li><a href="#"><i class="fa fa-lg fa-facebook"></i></a></li>
+                            <li><a href="#"><i class="fa fa-lg fa-twitter"></i></a></li>
+                            <li><a href="#"><i class="fa fa-lg fa-google-plus"></i></a></li>
+                            <li><a href="#"><i class="fa fa-lg fa-instagram"></i></a></li>
+                            <li><a href="#"><i class="fa fa-lg fa-youtube-play"></i></a></li>
+                        </ul>
+                    </div>
+                    <hr/>
+                </div>
+            </section>
+        </div>
     </div>
-    <footer>
-    </footer>
 </body>
 
 </html>
