--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
     <script src="bower_components/firebase/firebase.js"></script>
     <script src="bower_components/angularfire/dist/angularfire.min.js"></script>
     <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script src="bower_components/angular-bootstrap/ui-bootstrap.min.js"></script>
     <script src="bower_components/moment/moment.js"></script>
     <script src="dist/all.min.js" type="text/javascript"></script>
 </head>
@@ -34,15 +33,16 @@
             <section class="nav-left">
                 <nav>
                     <a href="#/" ng-click="menuClick()"><i class="fa fa-home"></i><span>HOME</span></a>
-                    <a href="#calendar" ng-click="menuClick()"><i class="fa fa-calendar"></i><span>FIXTURES</span></a>
+                    <a href="#calendar" ng-click="menuClick()"><i class="fa fa-calendar"></i><span>CALENDAR</span></a>
                     <a href="#team" ng-click="menuClick()"><i class="fa fa-users"></i><span>TEAM</span></a>
-                    <a href="#table" ng-click="menuClick()"><i class="fa fa-calendar"></i><span>LEAGUE TABLE</span></a>
+                    <a href="#table" ng-click="menuClick()"><i class="fa fa-calendar"></i><span>LADDER</span></a>
+                    <a href="" ng-click="menuClick()"><i class="fa fa-ticket"></i><span>TICKET</span></a>
+                    <a href="" ng-click="menuClick()"><i class="fa fa-shopping-bag"></i><span>SHOPPING</span></a>
                 </nav>
             </section>
             <section class="content">
                 <div ng-view></div>
                 <div class="footer">
-
                     <h4>OFFICIAL PARTNERS</h4>
                     <div class="partners">
                         <div class="col-xs-12">
@@ -54,11 +54,11 @@
                     <hr/>
                     <div class="social">
                         <ul>
-                            <li><a href="#"><i class="fa fa-lg fa-facebook"></i></a></li>
-                            <li><a href="#"><i class="fa fa-lg fa-twitter"></i></a></li>
-                            <li><a href="#"><i class="fa fa-lg fa-google-plus"></i></a></li>
-                            <li><a href="#"><i class="fa fa-lg fa-instagram"></i></a></li>
-                            <li><a href="#"><i class="fa fa-lg fa-youtube-play"></i></a></li>
+                            <li><a href=""><i class="fa fa-lg fa-facebook"></i></a></li>
+                            <li><a href=""><i class="fa fa-lg fa-twitter"></i></a></li>
+                            <li><a href=""><i class="fa fa-lg fa-google-plus"></i></a></li>
+                            <li><a href=""><i class="fa fa-lg fa-instagram"></i></a></li>
+                            <li><a href=""><i class="fa fa-lg fa-youtube-play"></i></a></li>
                         </ul>
                     </div>
                     <hr/>
